# Calculator

./: CMakeLists.txt  README.md
include/: Addition.h  BaseOperation.h  BinaryOperation.h  Context.h  Multiplication.h  Parsing.h  PostfixOperation.h  PrefixOperation.h  SupportModule.h
lib_src/: Cosinus.cpp  Division.cpp  Factorial.cpp  Power.cpp  Substraction.cpp
src/: Parsing.cpp  SupportModule.cpp  main.cpp
